force-app/main/default/objects/leankor__ScheduleMode__c/leankor__ScheduleMode__c.object-meta.xml
<CustomObject>
    <description>Contains the scheduling mode of the activity.</description>
    <label>Schedule Mode</label>
    <nameField>
        <displayFormat>SCH-{0000000000}</displayFormat>
        <label>Schedule Mode Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Modes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>