force-app/main/default/objects/leankor__ScheduleMode__c/fields/leankor__ConstraintDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__ConstraintDateTime__c</fullName>
    <description>Date and Time of constraint.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Constraint Date Time</label>
    <type>DateTime</type>
</CustomField>