force-app/main/default/objects/leankor__ScheduleMode__c/fields/leankor__EffortActual__c.field-meta.xml
<CustomField>
    <fullName>leankor__EffortActual__c</fullName>
    <label>Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>