force-app/main/default/objects/leankor__ScheduleMode__c/fields/leankor__ManuallyScheduled__c.field-meta.xml
<CustomField>
    <fullName>leankor__ManuallyScheduled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Manually Scheduled</label>
    <type>Checkbox</type>
</CustomField>