force-app/main/default/objects/leankor__ScheduleMode__c/fields/leankor__Mode__c.field-meta.xml
<CustomField>
    <fullName>leankor__Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>FixedDuration</fullName>
            </value>
            <value>
                <fullName>EffortDriven</fullName>
            </value>
            <value>
                <fullName>DynamicAssignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>