force-app/main/default/objects/leankor__ScheduleMode__c/fields/leankor__ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>leankor__ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets the work item to a read only mode.</description>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>