force-app/main/default/objects/leankor__ScheduleMode__c/fields/leankor__ScheduleConstraint__c.field-meta.xml
<CustomField>
    <fullName>leankor__ScheduleConstraint__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Schedule Constraint</label>
    <referenceTo>leankor__ScheduleConstraint__c</referenceTo>
    <relationshipLabel>Schedule Modes</relationshipLabel>
    <relationshipName>ConstraintScheduleModes</relationshipName>
    <type>Lookup</type>
</CustomField>